<resources>
    <string name="app_name">Lecture6</string>
    <string name="kime">Kime</string>
    <string name="konu">Konu</string>
    <string name="mesaj">Mesaj</string>
    <string name="gonder">Gönder</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnNokta">.</string>
    <string name="btnEsit">=</string>
    <string name="btnToplama">+</string>
    <string name="btnCikarma">-</string>
    <string name="btnBolme">/</string>
    <string name="btnCarpma">*</string>
    <string name="btnTemizle">Temizle</string>
    <string name="btnSil">Sil</string>
</resources>
