<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hesaplamaEkran"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="start"
        android:textColor="#f2f2"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSil"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnSil"
            android:textSize="25sp"
            style="?android:borderlessButtonStyle"
            />
        <Button
            android:id="@+id/btnTemizle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnTemizle"
            android:textSize="25sp"
            style="?android:borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn7"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn8"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn9"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btnBolme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnBolme"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn4"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn5"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn6"
            android:textSize="25sp"
            style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btnCarpma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnCarpma"
            android:textSize="25sp"
            style="?android:borderlessButtonStyle" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn1"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn2"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn3"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btnCikarma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnCikarma"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNokta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnNokta"
            android:textSize="25sp"
            style="?android:borderlessButtonStyle" />


        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn0"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />

        <Button
            android:id="@+id/btnEsit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnEsit"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />


        <Button
            android:id="@+id/btnToplama"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btnToplama"
            android:textSize="25sp" style="?android:borderlessButtonStyle" />


    </LinearLayout>


</LinearLayout>